2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* produce-separation-plots.py --> produce-separation-data.py:
	file renamed

	* README.md:
	updated the whole workflow after the meeting in Les Houches on June 6th.
	mentioned that hadron-level is the default
	added a description of what set of plots we want (based on the wiki)

	* MC_LHQG_EE.cc:
	switched to R=0.2, 0.4, 0.6, 0.8, 1.0

	* post-process.sh:
	added the machinery to do multiple energies; added the 800 GeV results

	* MC_LHQG_EE.plot:
	set the log thrust to -8

	* post-process.sh:
	specified explicitly the configuration file

	* produce-separation-plots.py:
	produce separate plots for each of the 3 R values

	* separation.plot:
	* post-process.sh:
	worked on plot cosmetics

	* README.md:
	replaced the request for a 500 GeV run by a 400 GeV one (keeps
	geometric progression);
	added some description of the latest "scripting" work

	* post-process.sh:
	fixed wrong names when processing Herwig results

	* produce-separation-plots.py:
	fixed a bug wit the output file

2015-06-06  Jesse Thaler  <jthaler@mit.edu>

	* compute-efficiencies.py
	Added correct (?) uncertainties for separation plots

2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added summary plots

	* separation.plot:              *** ADDED ***
	added a file with plotting settings for the summary plots

	* produce-separation-plots.py:  *** ADDED ***
	* get-separation.sh:            *** ADDED ***
	added a simple script that extract an entry from the separation
	tables produced by compute-efficiencies.py and a Pythin script
	that produces yoda files with information useful for summary plots

	* post-process.sh:
	added Herwig++ dipole-shower hadron-level results to the plots

	* post-process.sh:
	added Herwig w. hadronisation
	added a FORCE_PLOTS option which forces only the plots
	fixed a reordering issue

	* MC_LHQG_EE.plot:
	simplified a few things + set a linear y scale for all plots
